# labsBFU

./: lab10.cpp  lab8.cpp  problem4.cpp  problem5.cpp
firstSemester/: lab10.cpp  lab4.2.cpp  lab5.1.cpp  problem3.cpp
firstSemester/lab6-7/: main.cpp
firstSemester/lab6-7/src/: reading.cpp
firstSemester/lab7/src/: writing.cpp
firstTerm/: lab1.cpp  lab2.1.cpp  lab3.cpp  lab5.2.cpp  lab9.cpp  problem2.cpp
firstTerm/lab2/: lab2.2.cpp
firstTerm/lab4/: lab4.1.cpp  lab4.3.cpp
firstTerm/lab5/: lab5.2_v2.cpp
firstTerm/lab6-7/: CMakeLists.txt
firstTerm/lab6-7/src/: matrixal.cpp
firstTerm/problem5/: problem5.cpp
firstTerm/problem6/: problem6.cpp
lab7/: .CMakeLists.txt.swp
lab7/inc/: matrixal.hpp  reading.hpp  writing.hpp
secondTerm/: main.cpp
secondTerm/lab1/: main.cpp
secondTerm/lab2/: main.cpp
secondTerm/lab3/: main.cpp
secondTerm/lab4/: main.cpp
secondTerm/lab5/: main.cpp
secondTerm/lab6/: CMakeLists.txt  Logger.hpp  main.cpp
secondTerm/lab7/: CMakeLists.txt  main.cpp
secondTerm/lab8/: CMakeLists.txt  main.cpp
secondTerm/problem1/: CMakeLists.txt  main.cpp
secondTerm/problem1.cpp/: CMakeLists.txt  main.cpp
secondTerm/problem2/: main.cpp
secondTerm/problem3/: CMakeLists.txt  main.cpp
secondTerm/problem4/: CMakeLists.txt  input.txt  main.cpp
secondTerm/problem4/inc/: device.h  dsib.h  em.h  hcu.h
